sliding image overflowing: fixed.

--- a/app/assets/styles/modules/base/_base.css
+++ b/app/assets/styles/modules/base/_base.css
@@ -1,6 +1,10 @@
 * {
   box-sizing: border-box;
 }
+html {
+  width: 100vw;
+  overflow-x: hidden;
+}
 body {
   font-family: Roboto, serif;
 }
