--- a/app/assets/styles/modules/components/_slide-left-on-scroll.css
+++ b/app/assets/styles/modules/components/_slide-left-on-scroll.css
@@ -1,5 +1,6 @@
 .slide-left-on-scroll {
-  right: -100%;
+  overflow: hidden;
+  right: -600px;
   transition: right 1000ms;
 
   &--is-visible {
